test/caffeine_lang/corpus/frontend/parser/errors/unclosed_struct_brace.caffeine
Blueprints for "SLO"
  * "test":
    Requires { env: String
    Provides { value: "x" }
